--- a/sources/HeuristicLab.SimOpt/3.2/HeuristicLab.SimOpt-3.2.csproj
+++ b/sources/HeuristicLab.SimOpt/3.2/HeuristicLab.SimOpt-3.2.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>IntParameterBoundConstraintView.cs</DependentUpon>
     </Compile>
     <Compile Include="IntParameterBoundConstraint.cs" />
+    <Compile Include="NumericDataAverageMultiCrossover.cs" />
     <Compile Include="NumericDataRoundedAverageMultiCrossover.cs">
       <SubType>Code</SubType>
     </Compile>
