Fixed some bugs in the Security DAL (#597)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1729 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Security.ADODataAccess/3.2/HeuristicLab.Security.ADODataAccess-3.2.csproj
+++ b/sources/HeuristicLab.Security.ADODataAccess/3.2/HeuristicLab.Security.ADODataAccess-3.2.csproj
@@ -73,6 +73,10 @@ call PreBuildEvent.cmd</PreBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ADODataAccessPlugin.cs" />
+    <Compile Include="dsSecurity.cs">
+      <DependentUpon>dsSecurity.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TableAdapterWrapper\GrantedPermissionsAdapterWrapper.cs" />
     <Compile Include="TableAdapterWrapper\PermissionOwner_UserGroupAdapterWrapper.cs" />
     <Compile Include="UserGroupAdapter.cs" />
