Added snk to StatisticalAnalysis plugin
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1744 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.StatisticalAnalysis/3.2/HeuristicLab.StatisticalAnalysis-3.2.csproj
+++ b/sources/HeuristicLab.StatisticalAnalysis/3.2/HeuristicLab.StatisticalAnalysis-3.2.csproj
@@ -14,6 +14,8 @@
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -90,6 +92,7 @@
       <DependentUpon>MannWhitneyWilcoxonTestControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <ItemGroup>
