--- a/sources/HeuristicLab.Selection.Uncertainty/v3.2/HeuristicLab.Selection.Uncertainty.csproj
+++ b/sources/HeuristicLab.Selection.Uncertainty/v3.2/HeuristicLab.Selection.Uncertainty.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UncertainBestSelector.cs" />
     <Compile Include="UncertainTournamentSelector.cs" />
     <Compile Include="UncertaintyPlugin.cs" />
     <None Include="HeuristicLab.snk" />
