--- a/sources/HeuristicLab.Security.Server/3.2/HeuristicLab.Security.Server-3.2.csproj
+++ b/sources/HeuristicLab.Security.Server/3.2/HeuristicLab.Security.Server-3.2.csproj
@@ -95,6 +95,10 @@
     <Compile Include="SecurityServerPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\HeuristicLab.Hive.Contracts\3.2\HeuristicLab.Hive.Contracts-3.2.csproj">
+      <Project>{134F93D7-E7C8-4ECD-9923-7F63259A60D8}</Project>
+      <Name>HeuristicLab.Hive.Contracts-3.2</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
       <Name>HeuristicLab.PluginInfrastructure</Name>
