--- a/sources/HeuristicLab.Visualization.Test/3.2/HeuristicLab.Visualization.Test-3.2.csproj
+++ b/sources/HeuristicLab.Visualization.Test/3.2/HeuristicLab.Visualization.Test-3.2.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="HeuristicLab.snk" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
