added SimpleMSEEvaluator in HL SVM project (ticket #619)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1810 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.SupportVectorMachines/3.2/HeuristicLab.SupportVectorMachines-3.2.csproj
+++ b/sources/HeuristicLab.SupportVectorMachines/3.2/HeuristicLab.SupportVectorMachines-3.2.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="HeuristicLabSupportVectorMachinesPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleMSEEvaluator.cs" />
     <Compile Include="SupportVectorCreator.cs" />
     <Compile Include="SupportVectorEvaluator.cs" />
     <Compile Include="SVMHelper.cs" />
