--- a/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
+++ b/sources/HeuristicLab.GP.StructureIdentification/3.3/HeuristicLab.GP.StructureIdentification-3.3.csproj
@@ -88,6 +88,8 @@
     <Compile Include="ConfigurableFunctionLibraryInjector.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="AlgorithmBase.cs" />
+    <Compile Include="HL2TreeEvaluator.cs" />
+    <Compile Include="HL2TreeEvaluatorInjector.cs" />
     <Compile Include="TreeEvaluatorInjector.cs" />
     <Compile Include="ITreeEvaluator.cs" />
     <Compile Include="Evaluators\MeanAbsolutePercentageOfRangeErrorEvaluator.cs" />
