#519 added floating average
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1818 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
+++ b/sources/HeuristicLab.Visualization/3.2/HeuristicLab.Visualization-3.2.csproj
@@ -111,6 +111,7 @@
     </Compile>
     <Compile Include="DataExport\IExporter.cs" />
     <Compile Include="DataRowBase.cs" />
+    <Compile Include="FloatingAvgAggregator.cs" />
     <Compile Include="LabelProvider\ContinuousLabelProvider.cs" />
     <Compile Include="LabelProvider\DiscreteLabelProvider.cs" />
     <Compile Include="Grid.cs" />
